--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Lindsay Peltier: Software Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/base.css" />
+		<link rel="stylesheet" href="assets/css/module.css" />
+		<link rel="stylesheet" href="assets/css/layout.css" />
 	</head>
 	<body class="is-preload">
 
